@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 7;
+use Test::More tests => 12;
 use Test::NoWarnings;
 use File::Spec                 ();
 use Padre::Project::Perl       ();
@@ -24,30 +24,71 @@ my $project = new_ok(
 ######################################################################
 # Scan a known tree via a project
 
-my $task = new_ok(
-	'Padre::Wx::Directory::Task',
-	[   project => $project,
-	]
-);
-ok( $task->run, '->run ok' );
-is( ref( $task->{model} ), 'ARRAY', '->{model} ok' );
-my @files = @{ $task->{model} };
-is( scalar( grep { !$_->isa('Padre::Wx::Directory::Path') } @files ), 0,
-	'All files are Padre::Wx::Directory::Path objects',
-);
-is_deeply(
-	[ map { $_->unix } @files ],
-	[   qw{
-			Changes
-			lib
-			lib/Config
-			lib/Config/Tiny.pm
-			Makefile.PL
-			t
-			t/01_compile.t
-			t/02_main.t
-			test.conf
-			}
-	],
-	'Config-Tiny project contains expected files',
-);
+SCOPE: {
+	my $task = new_ok(
+		'Padre::Wx::Directory::Task', [
+			project => $project,
+			order   => 'first',
+		]
+	);
+	ok( $task->run, '->run ok' );
+	is( ref( $task->{model} ), 'ARRAY', '->{model} ok' );
+	my @files = @{ $task->{model} };
+	is( scalar( grep { !$_->isa('Padre::Wx::Directory::Path') } @files ), 0,
+		'All files are Padre::Wx::Directory::Path objects',
+	);
+	is_deeply(
+		[ map { $_->unix } @files ],
+		[   qw{
+				lib
+				lib/Config
+				lib/Config/Tiny.pm
+				t
+				t/01_compile.t
+				t/02_main.t
+				Changes
+				Makefile.PL
+				test.conf
+				}
+		],
+		'Config-Tiny project contains expected files',
+	);
+}
+
+
+
+
+
+######################################################################
+# Repeat to test mixed-directory order
+
+SCOPE: {
+	my $task = new_ok(
+		'Padre::Wx::Directory::Task', [
+			project => $project,
+			order   => 'mixed',
+		]
+	);
+	ok( $task->run, '->run ok' );
+	is( ref( $task->{model} ), 'ARRAY', '->{model} ok' );
+	my @files = @{ $task->{model} };
+	is( scalar( grep { !$_->isa('Padre::Wx::Directory::Path') } @files ), 0,
+		'All files are Padre::Wx::Directory::Path objects',
+	);
+	is_deeply(
+		[ map { $_->unix } @files ],
+		[   qw{
+				Changes
+				lib
+				lib/Config
+				lib/Config/Tiny.pm
+				Makefile.PL
+				t
+				t/01_compile.t
+				t/02_main.t
+				test.conf
+				}
+		],
+		'Config-Tiny project contains expected files',
+	);
+}
